--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "repository": {},
   "scripts": {
-    "start": "ts-node src/main.server.ts",
+    "start": "ts-node index.ts",
+    "ts-doc": "swagger-ts-generate --entryFile=./index.ts --swaggerDir=. --routesDir=./src",
     "start2": "npm run build && nodemon ./dist/server.js",
     "build": "webpack",
     "build:aot": " webpack --env.aot --env.server",
@@ -27,6 +28,7 @@
     "jsdom": "^11.2.0",
     "json-loader": "^0.5.7",
     "karma-firefox-launcher": "^1.0.1",
+    "mongoose": "^4.12.3",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "rxjs": "^5.2.0",
@@ -60,8 +62,10 @@
     "rimraf": "^2.6.1",
     "script-ext-html-webpack-plugin": "^1.7.1",
     "supertest": "^3.0.0",
+    "swagger-ts": "0.0.21",
     "ts-loader": "^2.2.1",
     "ts-node": "^3.3.0",
+    "typedoc": "^0.9.0",
     "typescript": "^2.2.1",
     "webpack": "^2.2.1",
     "webpack-merge": "^4.0.0",
