--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": {},
   "scripts": {
     "start": "ts-node index.ts",
+    "startdi": "ts-node prueba2.ts",
     "ts-doc": "swagger-ts-generate --entryFile=./index.ts --swaggerDir=. --routesDir=./src",
     "start2": "npm run build && nodemon ./dist/server.js",
     "build": "webpack",
@@ -24,6 +25,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "awilix": "^2.8.4",
     "express": "^4.15.2",
     "jsdom": "^11.2.0",
     "json-loader": "^0.5.7",
@@ -32,6 +34,8 @@
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "rxjs": "^5.2.0",
+    "typescript-rest": "^1.1.2",
+    "typescript-rest-swagger": "0.0.10",
     "xhr2": "^0.1.4",
     "zone.js": "^0.8.5"
   },
@@ -44,11 +48,14 @@
     "chai": "^4.1.2",
     "expect": "^21.2.0",
     "html-webpack-plugin": "^2.28.0",
+    "jasmine": "^2.8.0",
+    "jasmine-core": "^2.8.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-es6-shim": "^1.0.0",
     "karma-htmlfile-reporter": "^0.3.5",
+    "karma-jasmine": "^1.1.0",
     "karma-jsdom-launcher": "^6.1.2",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-spec-reporter": "0.0.31",
