--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "awilix": "^2.8.4",
+    "cors": "^2.8.4",
     "express": "^4.15.2",
     "jsdom": "^11.2.0",
     "json-loader": "^0.5.7",
